fix alignment

--- a/wp-content/themes/special/src/css/main-navigation.css
+++ b/wp-content/themes/special/src/css/main-navigation.css
@@ -6,6 +6,7 @@
   border-block-end: 0.0625em solid var(--secondary);
   margin: 0 auto;
   gap: 0.15rem;
+  position: relative;
 }
 
 .site header a {
@@ -94,12 +95,13 @@
     .site > header {
       flex-direction: column;
       position: sticky;
-      top: 50%;
+      top: 0;
       width: 100%;
+      height: 100vh;
       align-items: center;
-      border-block-end: none;
+      justify-content: center;
       margin-inline-start: 0;
-      transform: translateY(-50%);
+      border-block-end: none;
     }
 
     /* logo */
